# metal-ray-tracing

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  README.md  conanfile.py  presentation.md
cmake/: deployment.cmake
cmake/interfaceBuilder/: CMakeDetermineInterfaceBuilderCompiler.cmake  CMakeInterfaceBuilderCompiler.cmake.in  CMakeInterfaceBuilderInformation.cmake  CMakeTestInterfaceBuilderCompiler.cmake
cmake/metal/: CMakeDetermineMetalCompiler.cmake  CMakeMetalCompiler.cmake.in  CMakeMetalInformation.cmake  CMakeTestMetalCompiler.cmake
src/: CMakeLists.txt
src/MPSPathTracingSample/: CMakeLists.txt  Renderer.h  Renderer.mm  Scene.h  Scene.mm  ShaderTypes.h  Shaders.metal  Transforms.mm
src/MPSPathTracingSample/iOS/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  main.m
src/MPSPathTracingSample/macOS/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  Info.plist.in  main.m
src/MPSPathTracingSample/metal/: CMakeLists.txt  ShaderTypes.h  Shaders.metal  numeric.h  random.h  random.metal
